Third test doesn't pass yet, need to fix